--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<% else %> 
 	  <ul> 
 	    <li><%= link_to "Login", 'login' %></a></li> 
-	    <li><%= link_to "Signup", '/patients' %></a></li> 
+	    <li><%= link_to "Patient Registeration", '/patients' %></a></li> 
 	  </ul> 
 	<% end %>
     <%= yield %>
