--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<h1 style="text-align: center">Sign Up</h1>
+<h1 style="text-align: center">Doctor v/s Patients List</h1>
 <div style="text-align: center;">
-	<button><%= link_to 'Doctor', doctors_path() %></button>
-	<button style="margin-left: 100px;"><%= link_to 'Patient', patients_path() %></button>
+	<button><%= link_to 'Add Doctor', doctors_path() %></button>
+	<button style="margin-left: 100px;"><%= link_to 'Search Doctors', search_path() %></button>
 </div>
 <div style="text-align: center; border-style: solid; margin-top: 10px;">
 <div style="display: inline-block; vertical-align: top">
