--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -66,6 +66,7 @@
 <%= form_tag(search_path, method: :get) do %>
   <%= text_field_tag :name %>
   <%= submit_tag 'Search' %>
+  <button style="margin-left: 100px;"><%= link_to 'Back', root_path() %></button>
 <% end %>
 
 <div style="text-align: center; margin-top: 10px; border-style: solid;">
