--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -1,6 +1,6 @@
 <h1> Patient's Login / Admin Login </h1>
 <%= form_for(:auth, url: login_path) do |f| %>
-<%= f.text_field :name, :placeholder => "Name" %> <br><br>
+<%= f.email_field :email, :placeholder => "Email" %> <br><br>
 <%= f.password_field :password, :placeholder => "Password" %> <br><br><br>
 <%= f.submit "Log in", class: "btn-submit" %>
 <% end %>
