--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Patient's Login / Admin Login </h1>
+<h1> User's Login / Admin Login </h1>
 <%= form_for(:auth, url: login_path) do |f| %>
 <%= f.email_field :email, :placeholder => "Email" %> <br><br>
 <%= f.password_field :password, :placeholder => "Password" %> <br><br><br>
