--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,27 +6,40 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
   </head>
 
   <body>
     <div class="nav">
 	    <% if current_page?(login_path) %>
 	      <ul>
-		    <li><%= link_to "Registeration", new_patient_path %></a></li> 
+		    <li><%= link_to "Registeration", new_user_path %></a></li> 
 		  </ul>
-	    <% elsif current_page?(new_patient_path) %>
+	    <% elsif current_page?(new_user_path) %>
 	      <ul>
 		    <li><%= link_to "Login", login_path %></a></li> 
 		  </ul>
-	    <% elsif current_user %> 
+	    <% elsif current_user && current_user.admin? %> 
+		  <ul> 
+		    <li class="username"><%= current_user.name %></li>
+		    <li><%= link_to "Home", root_path %></li>
+		    <li><%= link_to "Search Doctor", search_path %></li>
+		    <li><%= link_to "Add Doctor", doctors_path %></li> 
+		    <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
+		  </ul>
+		<% elsif current_user %> 
 		  <ul> 
 		    <li class="username"><%= current_user.name %></li> 
 		    <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
-		  </ul> 
+		  </ul>    
 		<% else %> 
 		  <ul> 
 		    <li><%= link_to "Login", login_path %></a></li> 
-		    <li><%= link_to "Registeration", new_patient_path %></a></li> 
+		    <li><%= link_to "Registeration", new_user_path %></a></li> 
 		  </ul> 
 		<% end %>
     <%= yield %>
