--- a/app/views/user_mailer/appointment_confirm_email.html.erb
+++ b/app/views/user_mailer/appointment_confirm_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to abc hospital, <%= @appointment.patient.name %></h1>
+    <h1>Welcome to abc hospital, <%= @appointment.user.name %></h1>
     <p>
       Your appointment has been successfully confirmed with <%= @appointment.doctor.name %> on <%= @appointment.appointment_date %>.<br>
     </p>
